--- a/FundSharer/Views/Home/Index.cshtml
+++ b/FundSharer/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 @Html.Partial("_Modal")
 <div class="panel-info panel-body jumbotron text-center">
     <div>
-        <h1 class="animated lightSpeedIn">ExcElsior</h1>
+        <h1 class="animated lightSpeedIn" style="color:chartreuse">ExcElsiorr</h1>
         <p class="lead">Join and start making a difference today!</p>
     </div>
 </div>
@@ -16,7 +16,7 @@
         <div class="col-md-4">
             <div class="well bg-info text-center">
                 <h2>About Us</h2>
-                <p>
+                <p style="color:chartreuse">
                     Shared fund is a community where people assits one another on a platform that facilitates
                     financial aid among  participants nationwide. It adopts a member-to-member donation scheme where donors stand to earn
                     200% of their donation within 72 hours through our complex but effective matching system.
@@ -26,7 +26,7 @@
         <div class="col-md-4">
             <div class="well bg-success text-center">
                 <h2>How it Works</h2>
-                <ul>
+                <ul style="color:chartreuse">
                     <li><p>A member donate a sum of #50,000 to a designated beneficiary member assigned by the same.</p></li>
                     <li><p>The beneficiary member the confrims the donation.</p></li>
                     <li><p>The matching system assigns other members as donors to paying member- They each pay the member #50,000.</p></li>
@@ -37,7 +37,7 @@
         <div class="col-md-4">
             <div class="well bg-danger text-center">
                 <h2>Caveat</h2>
-                <ol>
+                <ol style="color:chartreuse">
                     <li><p>Kindly use spare cash for donations.</p></li>
                     <li><p>All donations are processed as bank transfers.</p></li>
                     <li><p>Members who are unable to meet a specified donation deadline will be removed from the community </p></li>
@@ -48,7 +48,7 @@
 <div class="panel-danger">
     <div class="row jumbotron text-center text-info text-capitalize">
         <h3>What you get:</h3>
-        <ul>
+        <ul style="color:chartreuse">
             <li>2 to 1 Matrix auto recylce system</li>
             <li>Strict auto recycle</li>
             <li>100% returns</li>
