--- a/FundSharer/Views/Shared/_Layout.cshtml
+++ b/FundSharer/Views/Shared/_Layout.cshtml
@@ -50,10 +50,9 @@
     <div class="row">
         <div class="container body-content">
             @RenderBody()
-            <hr />
             <hr/>
             <footer>
-                <p>&copy; @DateTime.Now.Year - ExcElsior - Created by The Byte Men &trade;</p>
+                <p>&copy; @DateTime.Now.Year - ExcElsior - Created by The Byte People</p>
             </footer>
         </div>
     </div>
