--- a/FundSharer/Views/Account/_Login.cshtml
+++ b/FundSharer/Views/Account/_Login.cshtml
@@ -8,19 +8,19 @@
             {
                         @Html.AntiForgeryToken()
                         <hr />
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" }) 
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger"}) 
                         <div class="form-group">
-                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" }):
+                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label", style = "padding-right:2em"}):
                             <div class="col-md-10">
-                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", style="padding-left:5em" })
-                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control"})
+                                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger"})
                             </div>
                         </div>
                         <div class="form-group">
-                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label", style = "padding-left:2em"})
                             <div class="col-md-10">
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control", style="padding-left:5em"})
-                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control"})
+                                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger"})
                             </div>
                         </div>
                         <div class="form-group">
