--- a/FundSharer/Views/Account/_Register.cshtml
+++ b/FundSharer/Views/Account/_Register.cshtml
@@ -14,14 +14,14 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
+            @Html.LabelFor(m => m.LastName, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
                 @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.ContactNumber, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
+            @Html.LabelFor(m => m.ContactNumber, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
                 @Html.TextBoxFor(m => m.ContactNumber, new { @class = "form-control" })
             </div>
         </div>
@@ -30,20 +30,20 @@
     <div class="form-group">
 
         <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-            <div class=" col-md-10">
+            @Html.LabelFor(m => m.Email, new { @class = "col-sm-2 control-label" })
+            <div class=" col-sm-10">
                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
+            @Html.LabelFor(m => m.Password, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
                 @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
+            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
                 @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
             </div>
         </div>
@@ -52,26 +52,26 @@
     <div class="form-group">
 
         <div class="form-group">
-            @Html.LabelFor(m => m.AccountTitle, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
+            @Html.LabelFor(m => m.AccountTitle, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
                 @Html.TextBoxFor(m => m.AccountTitle, new { @class = "form-control" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.BankName, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
+            @Html.LabelFor(m => m.BankName, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
                 @Html.TextBoxFor(m => m.BankName, new { @class = "form-control" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.AccountNumber, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
+            @Html.LabelFor(m => m.AccountNumber, new { @class = "col-sm-2 control-label" })
+            <div class="col-sm-10">
                 @Html.TextBoxFor(m => m.AccountNumber, new { @class = "form-control" })
             </div>
         </div>
 
     </div>
-    <div class="col-md-offset-2 col-md-10">
+    <div class="col-sm-offset-2 col-sm-10">
         <input type="submit" class="btn btn-primary" value="Register" />
     </div>
 
