modified the bank account model

--- a/FundSharer/Views/Shared/_Layout.cshtml
+++ b/FundSharer/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <h1><text class="navbar-brand" style="color:white">ExcElsiorr</text></h1>
+                    <p class="huge"><text class="navbar-brand" style="color:white">ExcElsiorr</text></p>
                     @* @Html.ActionLink("Fund Sharer", "Welcome", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
                 </div>
                 <div class="navbar-collapse collapse">
