--- a/FundSharer/Views/Account/_Login.cshtml
+++ b/FundSharer/Views/Account/_Login.cshtml
@@ -2,28 +2,32 @@
 @model LoginViewModel
 
 <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+    <div class="col-sm-8 col-sm-offset-2">
         <section id="loginForm">
                     @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                         @Html.AntiForgeryToken()
                         <hr />
                         @Html.ValidationSummary(true, "", new { @class = "text-danger"}) 
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label", style = "padding-right:2em"}):
-                            <div class="col-md-10">
+                        <div class="row form-group">
+                            <div class="col-md-5">
+                                @Html.LabelFor(m => m.Email, new { @class = "control-label" })
+                            </div>
+                            <div class="col-md-7">
                                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control"})
                                 @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger"})
                             </div>
                         </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label", style = "padding-left:2em"})
-                            <div class="col-md-10">
+                        <div class="row form-group">
+                            <div class="col-md-5">
+                                @Html.LabelFor(m => m.Password, new { @class = "control-label" })
+                            </div>
+                            <div class="col-md-7">
                                 @Html.PasswordFor(m => m.Password, new { @class = "form-control"})
                                 @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger"})
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="row form-group">
                             <div class="col-md-offset-2 col-md-10">
                                 <div class="checkbox">
                                     @Html.CheckBoxFor(m => m.RememberMe)
@@ -31,7 +35,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="row form-group">
                             <div class="col-md-offset-2 col-md-10">
                                 <input id="BtnSignIn" type="submit" value="Log in" class="btn btn-lg btn-success btn-lg" />
                             </div>
