--- a/FundSharer/Views/Account/_Register.cshtml
+++ b/FundSharer/Views/Account/_Register.cshtml
@@ -1,82 +1,104 @@
 ﻿@model FundSharer.Models.RegisterViewModel
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class=" form-group">
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+<div class="row">
+    <div class="col-sm-8 col-sm-offset-2">
+        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <hr />
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+            <div class="form-group">
+                <h3><label>Personal Information</label></h3>
+                <div class="row form-group">
+                    <div class="col-md-2">
+                        @Html.LabelFor(m => m.FirstName, new { @class = "control-label" })
+                    </div>
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-2">
+                        @Html.LabelFor(m => m.LastName, new { @class = "control-label" })
+                    </div>
+                    <div class="col-sm-10">
+                        @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-2">
+                        @Html.LabelFor(m => m.ContactNumber, new { @class = "control-label" })
+                    </div>
+                    <div class="col-sm-10">
+                        @Html.TextBoxFor(m => m.ContactNumber, new { @class = "form-control" })
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.LastName, new { @class = "col-sm-2 control-label" })
-            <div class="col-sm-10">
-                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+            <hr/>
+            <div class="form-group">
+                <h3><label>Sign Up Information.</label></h3>
+                <div class="row form-group">
+                    <div class="col-sm-2">
+                        @Html.LabelFor(m => m.Email, new { @class = "control-label" })
+                    </div>
+                    <div class=" col-sm-10">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-2">
+                        @Html.LabelFor(m => m.Password, new { @class = "control-label" })
+                    </div>
+                    <div class="col-sm-10">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-2">
+                        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label" })
+                    </div>
+                    <div class="col-sm-10">
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.ContactNumber, new { @class = "col-sm-2 control-label" })
-            <div class="col-sm-10">
-                @Html.TextBoxFor(m => m.ContactNumber, new { @class = "form-control" })
+            <hr/>
+            <div class="form-group">
+                <h3><label>Account Information</label></h3>
+                <div class="row form-group">
+                    <div class="col-sm-2">
+                        @Html.LabelFor(m => m.AccountTitle, new { @class = "control-label" })
+                    </div>
+                    <div class="col-sm-10">
+                        @Html.TextBoxFor(m => m.AccountTitle, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-2">
+                        @Html.LabelFor(m => m.BankName, new { @class = "control-label" })
+                    </div>
+                    <div class="col-sm-10">
+                        @Html.TextBoxFor(m => m.BankName, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-sm-2">
+                        @Html.LabelFor(m => m.AccountNumber, new { @class = "control-label" })
+                    </div>
+                    <div class="col-sm-10">
+                        @Html.TextBoxFor(m => m.AccountNumber, new { @class = "form-control" })
+                    </div>
+                </div>
             </div>
-        </div>
-
+            <hr />
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <input type="submit" class="btn btn-primary" value="Register" />
+                </div>
+            </div>
+        }
     </div>
-    <div class="form-group">
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "col-sm-2 control-label" })
-            <div class=" col-sm-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password, new { @class = "col-sm-2 control-label" })
-            <div class="col-sm-10">
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-sm-2 control-label" })
-            <div class="col-sm-10">
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-            </div>
-        </div>
-
-    </div>
-    <div class="form-group">
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.AccountTitle, new { @class = "col-sm-2 control-label" })
-            <div class="col-sm-10">
-                @Html.TextBoxFor(m => m.AccountTitle, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.BankName, new { @class = "col-sm-2 control-label" })
-            <div class="col-sm-10">
-                @Html.TextBoxFor(m => m.BankName, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.AccountNumber, new { @class = "col-sm-2 control-label" })
-            <div class="col-sm-10">
-                @Html.TextBoxFor(m => m.AccountNumber, new { @class = "form-control" })
-            </div>
-        </div>
-
-    </div>
-    <div class="col-sm-offset-2 col-sm-10">
-        <input type="submit" class="btn btn-primary" value="Register" />
-    </div>
-
-}
-
+</div>
 
     @Scripts.Render("~/bundles/jqueryval")
 
