--- a/FundSharer/Views/Shared/_RegisterLink.cshtml
+++ b/FundSharer/Views/Shared/_RegisterLink.cshtml
@@ -1,5 +1,6 @@
 ﻿<ul class="nav navbar-nav navbar-right">
-    <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+    @*<li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>*@
+    <li><a href="#" id="registerLink">Register</a></li>
 </ul>
 
 
