--- a/FundSharer/Views/Shared/_Modal.cshtml
+++ b/FundSharer/Views/Shared/_Modal.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+﻿@{ 
+    var preloadTitle = ViewBag.preloadTitle;
+}
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -7,7 +10,7 @@
                 </button>
                 <h4 class="modal-title" id="myModalLabel"></h4>
             </div>
-            <div class="modal-body" id="myModalBody">
+            <div class="modal-body @preloadTitle" id="myModalBody">
             </div>
             <div class="modal-footer" id="myModalFooter">
 
